--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   padding: 0 1rem;
 }
 
-/* From Uiverse.io by Nawsome */ 
+/* EN DESARROLO */ 
 .wheel-and-hamster {
   --dur: 1s;
   position: relative;
